@@ -11,7 +11,6 @@ from .queue import *
 from .workers import *
 from .network import *
 from .file import *
-from .local import *
 from .channel import *
 from .bridge import *
 from .promise import *
@@ -25,7 +24,6 @@ __all__ = [*errors.__all__,
            *workers.__all__,
            *network.__all__,
            *file.__all__,
-           *local.__all__,
            *channel.__all__,
            *bridge.__all__,
            *promise.__all__,
